--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/reset.css">
-<title>About-me</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/style.css">
+        <title>About-me</title>
+    </head>
 
-<body>
-Content of the document......
-<script src="js/app.js"></script> 
-</body>
+    <body>
+       <h1> Welcome to my page</h1>
+
+
+        <script src="js/app.js"></script> 
+    </body>
 
 </html> 
+
