updated css and html

--- a/index.html
+++ b/index.html
@@ -1,19 +1,51 @@
 
+
+
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/style.css">
-        <title>About-me</title>
-    </head>
 
-    <body>
-       <h1> Welcome to my page</h1>
+<head>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+  <meta charset="utf-8">
+  <title>About Me</title>
+</head>
 
+<body>
 
-        <script src="js/app.js"></script> 
-    </body>
+  <header></header>
+  <h1>The Man Behind The Curtain</h1>
+  <p id="firstPara">Hello! I am Chai.Narukulla and am 34 years old. 
+      I live in Seattle, Washington with my two dogs Angel and Winne.</p>
 
-</html> 
+  <section id='Accomplishments'>
+  <p id="accomplsh">Accomplishments to date.</p>
+  <ul class="accomplish">
+    <li class="accomplish">Graduated high school with Honors
+    <li class="accomplish">Associates of the Arts from Seattle Center College.</li>
+    <li class="accomplish">Graduated from University of Washington </li>
+    <li class="accomplish">Graduated from Codefellows </li>
+  </ul>
+</section>
+  <section id="workExperience">
+  <h2>Past work experience</h2>
+  <ol id="order">
+    <li>Multi unit operation manager at Seatac Airport</li>
+    <li>Event manager at Washington State convention Center</li>
+    <li>Casino Pit Boss</li>
+    <li>U.S.Navy</li>
+  </ol>
+</section>
+  <p id="lastPara">This is just a short list of accomplishments that I have achieved. As great as any persons resume can be, it does not really describe them. I believe in finding things that inspire and motivate, to create rich and fullfilling work.</p>
 
+  <footer>
+    <ul>
+      <li><a href="index.html">Contact me</a></li>
+      <li><a href="index.html">View my work</a></li>
+      <li><a href="index.html">Request a Job</a></li>
+    </ul>
+  </footer>
+  <script src="js/app.js"></script>
+</body>
+
+</html>
