--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="icon" type="image/png" href="image/favicon.png">
 
 </head>
 
@@ -58,13 +58,6 @@
       <a onclick="guessTheNumber()" class="btn">Guess My Number</a> 
       <div id="guessGameBlock">
           <h3 style="text-align:center">Guess The Number</h3> 
-          <p>We have selected a random number between 1 - 10.  
-          See if you can guess it.</p> 
-            <div class="form"> 
-              <label for="guessField">Enter a guess: </label> 
-              <input type = "number" id = "guessField" class = "guessField"> 
-              <input type = "submit" value = "Submit guess" class = "guessSubmit" id = "submitguess"> 
-           </div> 
      </div>
 
       <section class="services">
@@ -74,7 +67,7 @@
 
         <div class="row">
           <div class="one-half column">
-            <ul>
+            <ul style="list-style: none;">
               <h4>Accomplishments</h4>
               <span class="fa fa-picture-o"></span>
               <li>Graduated high school with Honors</li>
@@ -84,7 +77,7 @@
             </ul>
           </div>
            <div class="one-half column">
-             <ul>
+             <ul style="list-style: none;">
               <h4>Work Experience</h4>
               <li>Multi unit operation manager at Seatac Airport</li>
               <li>Event manager at Washington State convention Center</li>
@@ -134,11 +127,11 @@
 
 
           <div class="row">
-            <ol>
+            <ol style="list-style: none;">
               <h3 style="text-align:center">My Top Ten Places to visit while in Seattle</h3>
               <li>Kerry park</li>
               <li>The Museum of flight</li>
-              <li>safeco field</li>
+              <li>ChinaTown</li>
               <li>Mt Rainer</li>
               <li>Museum of Pop culture</li>
               <li>Arboretum park</li>
