Updated wit New nav bnar

--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
 
     <body>
 <!-- Primary Page Layout–-->
+<nav>
+    <ul class="navigation">
+      <li><a href="#" title="Menu" onclick="toggleMenu()">&#9776; Menu</a></li>
+      <li><a href="#" title="Home">Home</a></li>
+      <li><a href="#" title="About">About</a></li>
+      <li><a href="#" title="Service">Service</a></li>
+      <li><a href="#" title="Contact">Contact</a></li>
+    </ul>
+  </nav>
         <header>
         </header>
         <section class="about">
