--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       –––––––––––––––––––––––––––––––––––––––––––––––––– -->
       <link rel="icon" type="image/png" href="image/favicon.png">
 
+      <!-- Social Media 
+      __________________________________________________________-->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     </head>
 
     <body>
@@ -141,8 +145,11 @@
       <footer>    
           <section class="contact">
             <h4 class="center">Interested in samples of my work?</h4>
-            <a href="https://www.linkedin.com/in/chaitanya-narukulla/" class="btn inline-block">Linked-In</a>
-            <a href="https://github.com/chaitanyanarukulla" class="btn inline-block">Github</a>
+            <a href="https://github.com/chaitanyanarukulla" class="fa fa-github"></a>
+            <a href="https://www.linkedin.com/in/chaitanya-narukulla/" class="fa fa-linkedin"></a>
+            <a href="https://twitter.com/chai_naru" class="fa fa-twitter"></a>
+            <a href="https://www.instagram.com/chaitanyan/" class="fa fa-instagram"></a>
+
             </section>
       </footer>  
       <script src="js/app.js"></script>
